Proteus: Updated framework.